--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div class="header">
+  <a href="#default" class="logo">NewInnovationSoft</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
 <div class="center-content">
   <mat-card class="example-card">
     <mat-card-header>
